force-app/main/default/objects/MS_FSM_Data_Attribute_Definition__c/MS_FSM_Data_Attribute_Definition__c.object-meta.xml
<CustomObject>
    <label>Data Attribute Definition</label>
    <nameField>
        <label>Data Attribute Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Attribute Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>