force-app/main/default/objects/MS_FSM_Data_Attribute_Definition__c/fields/MS_FSM_Data_Collection_Name__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Data_Collection_Name__c</fullName>
    <description>Data collection name - refers to the data collection task associated whether it is a task that is referenced by a specific op id or one that spans across different op ids</description>
    <label>Data Collection Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>