force-app/main/default/objects/MS_FSM_Data_Attribute_Definition__c/fields/MS_FSM_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Data_Type__c</fullName>
    <description>Data types to determine which measurement field to use in attribute measurement</description>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Numeric</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Timestamp</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>