force-app/main/default/objects/MS_FSM_Data_Attribute_Definition__c/fields/MS_FSM_Field_Description__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Field_Description__c</fullName>
    <description>Name of the field describing the data point collected</description>
    <label>Field Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>