force-app/main/default/objects/MS_FSM_Data_Attribute_Definition__c/fields/MS_FSM_Lower_Bound__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Lower_Bound__c</fullName>
    <description>Lower bound to include for validation on numeric values</description>
    <label>Lower Bound</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>