force-app/main/default/objects/MS_FSM_Data_Attribute_Definition__c/fields/MS_FSM_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Product_Code__c</fullName>
    <description>Product code associated to data collection item. This is the EPN and its rev.</description>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>