force-app/main/default/objects/MS_FSM_Data_Attribute_Definition__c/fields/MS_FSM_Unit_of_Measurement__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Unit_of_Measurement__c</fullName>
    <label>Unit of Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>mm</fullName>
            </value>
            <value>
                <fullName>m</fullName>
            </value>
            <value>
                <fullName>kg</fullName>
            </value>
            <value>
                <fullName>ppm</fullName>
            </value>
            <value>
                <fullName>%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>